@@ -53,24 +53,11 @@ Notes on releasing.
    have been added, removed, or interface structures have changed,
    then more care is required.
 
-7. Increment the release version in CMakeLists.txt.  Change the
-   'project' property similar to
-
-     # Project version
-     project(tiff VERSION 4.0.5 LANGUAGES C)
-
-8. Update library ELF versioning in CMakeLists.txt.  This is a raw ELF
-   SO version specification similar to:
-
-     # Library version (unlike libtool's baroque scheme, WYSIWYG here)
-     set(SO_COMPATVERSION 5)
-     set(SO_VERSION 5.2.2)
-
-9. Add an entry to Changelog similar to:
+7. Add an entry to Changelog similar to:
 
      * libtiff 4.0.0 released.
 
-10. In the source tree do
+8. In the source tree do
 
      ./autogen.sh
 
@@ -78,7 +65,7 @@ Notes on releasing.
    maintainer build with current autoconf, automake, and libtool
    packages.  It is only needed when updating tool versions.
 
-11. It is recommended (but not required) to build outside of the source
+9. It is recommended (but not required) to build outside of the source
    tree so that the source tree is kept in a pristine state.  This
    also allows sharing the source directory on several networked
    systems.  For example:
@@ -91,17 +78,17 @@ Notes on releasing.
 
      ./configure --enable-maintainer-mode
 
-12. In the build tree do
+10. In the build tree do
 
      make release
 
    This will update "RELEASE-DATE", "VERSION", and libtiff/tiffvers.h
    in the source tree.
 
-13. In the source tree, verify that the version info in RELEASE-DATE,
+11. In the source tree, verify that the version info in RELEASE-DATE,
    VERSION and libtiff/tiffvers.h is right.
 
-14. In the build tree do
+12. In the build tree do
 
       make
       make distcheck
@@ -112,21 +99,21 @@ Notes on releasing.
     Two files with names tiff-version.tar.gz and tiff-version.zip will
     be created in the top level build directory.
 
-15. In the source tree do
+13. In the source tree do
 
       'cvs commit'.
 
-16. In the source tree do
+14. In the source tree do
 
       cvs tag Release-v4-0-0
 
     (or the appropriate name for the release)
 
-17. Copy release packages from the build tree to the
+15. Copy release packages from the build tree to the
     ftp.remotesensing.org ftp site.
 
       scp tiff-*.tar.gz tiff-*.zip \
     	 warmerdam@upload.osgeo.org:/osgeo/download/libtiff
 
-18. Announce to list, tiff@lists.maptools.org
+16. Announce to list, tiff@lists.maptools.org
 
